# zpool-status-exporter

./: CLAUDE.md  Cargo.toml  Instructions-max-bind-retries.md  SPEC.md  TODOs.md  accept-pr.sh  bacon.toml  default.nix  flake.nix
.claude/: 01-Analyst.md  02-Architect.md  03-Developer.md  04-Reviewer.md
nix/: alejandra.nix  cargo-vet.nix  crate.nix  flake-utils.nix  nixos.nix  package.nix  systemd.nix
nix/vm-tests/: default.nix  empty-zfs-auth.nix  empty-zfs.nix  max-bind-retries.nix  new-pool-never-scanned.nix  no-zfs.nix
pr/: README.md
pr/01-pool-never-scanned/: COMMENTS.md  REQUIREMENTS.md  SPEC.md
pr/02-vm-test-new-pool/: COMMENTS.md  REQUIREMENTS.md  SPEC.md
pr/03-metric-dev-root-not-blank/: COMMENTS.md  REQUIREMENTS.md
src/: auth.rs  fmt.rs  lib.rs  main.rs  root.html  zfs.rs
src/fmt/: macros.rs  meta.rs
supply-chain/: audits.toml  config.toml
tests/: single_integration_bin.rs
tests/common/: bin_cmd.rs  child_exitcode.rs  child_silent.rs  child_stderr.rs  end_to_end.rs  end_to_end_auth.rs  oneshot.rs  sans_io_cases.rs
tests/input/: input-01-corrupted.txt  input-02-online-data-corruption.txt  input-03-resilvered.txt  input-04-scrub-progress.txt  input-05-features.txt  input-06-removed.txt  input-07-unavail.txt  input-08-features-alt.txt  input-09-scrub-cancel.txt  input-10-new-pool.txt  input-11-degraded-no-scan.txt  modify_all.sh  output-01-corrupted.txt  output-02-online-data-corruption.txt  output-03-resilvered.txt  output-04-scrub-progress.txt  output-05-features.txt  output-06-removed.txt  output-07-unavail.txt  output-08-features-alt.txt  output-09-scrub-cancel.txt  output-10-new-pool.txt  output-11-degraded-no-scan.txt
