[package]
name = "zpool-status-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive", "cargo", "env"] }
nix = { version = "0.27.1", features = ["user"] }
serde = { version = "1.0.196", features = ["derive"] }
time = { version = "0.3.34", features = ["macros", "parsing", "local-offset"] }
tiny_http = "0.12.0"
