[package]
name = "zpool-status-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# FAKE zpool binary stand-in for integration tests
[[bin]]
# NOTE: name must be "zpool", and not "fake-zpool",
# to correctly shadow expected binary name "zpool"
name = "zpool"
path = "src/bin/fake-zpool.rs"

[dependencies]
anyhow = "1.0.79"
ascii = "1.1.0"
base64 = "0.21.7"
clap = { version = "4.4.18", features = ["derive", "cargo", "env"] }
ctrlc = "3.4.2"
nix = { version = "0.27.1", features = ["user", "signal"] }
time = { version = "0.3.34", features = ["macros", "parsing", "local-offset"] }
tiny_http = "0.12.0"

[dev-dependencies]
minreq = "2.11.0"
tempfile = "3.10.0"

