[package]
name = "zpool-status-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# FAKE zpool binary stand-in for integration tests
[[bin]]
# NOTE: name must be "zpool", and not "fake-zpool",
# to correctly shadow expected binary name "zpool"
name = "zpool"
path = "src/bin/fake-zpool.rs"

[lints.clippy]
# teach me
pedantic = { level = "warn", priority = -1}
# except this confusing pattern
bool_to_int_with_if = { level = "allow", priority = 1}

# no unwrap
unwrap_used = "deny"
# no panic
panic = "deny"

[lints.rust]
# docs!
missing_docs = "deny"
# no unsafe
unsafe_code = "forbid"

[lints.rustdoc]
# docs!
broken_intra_doc_links = "deny"

[dependencies]
anyhow = "1.0.79"
ascii = "1.1.0"
base64 = "0.22"
clap = { version = "4.4.18", features = ["derive", "cargo", "env"] }
ctrlc = "3.4.2"
jiff = "0.1.14"
nix = { version = "0.29", features = ["user", "signal"] }
sd-notify = "0.4.3"
serde = { version = "1.0.214", features = ["derive"] }
tiny_http = "0.12.0"
tinytemplate = "1.2.1"

[dev-dependencies]
minreq = "2.11.0"
tempfile = "3.10.0"

